tidied up a few reusable components

--- a/src/global.css
+++ b/src/global.css
@@ -9,6 +9,9 @@ button {
   background-color: var(--green);
   color: white;
   cursor: pointer;
+  padding: 10px;
+  margin: 10px;
+  font-size: 30px;
 }
 
 button:hover {
