--- a/src/global.css
+++ b/src/global.css
@@ -23,6 +23,11 @@ button:hover {
   flex-direction: row;
 }
 
+/* .nav-bar {
+  display: flex;
+  align-items: flex-end;
+} */
+
 .flex-col {
   display: flex;
   flex-direction: column;
