--- a/src/stories/page.css
+++ b/src/stories/page.css
@@ -5,7 +5,7 @@ section {
   padding: 48px 20px;
   margin: 0 auto;
   max-width: 600px;
-  color: #333;
+  /* color: #333; */
 }
 
 h2 {
@@ -23,7 +23,7 @@ p {
 
 a {
   text-decoration: none;
-  color: #1ea7fd;
+  /* color: #1ea7fd; */
 }
 
 ul {
@@ -41,8 +41,8 @@ li {
   font-size: 11px;
   line-height: 12px;
   font-weight: 700;
-  background: #e7fdd8;
-  color: #66bf3c;
+  /* background: #e7fdd8;
+  color: #66bf3c; */
   padding: 4px 12px;
   margin-right: 10px;
   vertical-align: top;
@@ -65,5 +65,5 @@ li {
 }
 
 .tip-wrapper svg path {
-  fill: #1ea7fd;
+  /* fill: #1ea7fd; */
 }
