--- a/src/Components/4.Journal_Entry_Page/journal.css
+++ b/src/Components/4.Journal_Entry_Page/journal.css
@@ -1,3 +1,6 @@
+.wrapper {
+  padding-bottom: 55px;
+}
 .container {
   padding: 10%;
   border: 5px solid rgb(15, 95, 95);
@@ -8,7 +11,7 @@
   display: flex;
   flex-direction: column;
   /* align-self: center; */
-  margin: auto;
+  margin: 10%;
   font-size: 1em;
 }
 
