Journal Entry Amended

--- a/src/Components/4.Journal_Entry_Page/journal.css
+++ b/src/Components/4.Journal_Entry_Page/journal.css
@@ -3,8 +3,6 @@
 }
 .container {
   padding: 10%;
-  border: 5px solid rgb(15, 95, 95);
-  background-color: rgb(32, 202, 202);
   width: 80%;
   padding: 0 20px;
   border-radius: 20px;
@@ -15,22 +13,8 @@
   font-size: 1em;
 }
 
-/* .align-right {
-  justify-self: right;
-} */
-
-.journalButton {
-  color: snow;
-  border: 3px solid snow;
-  background-color: rgb(15, 95, 95);
-  width: auto;
-  height: auto;
-  padding: 0 5%;
-  border-radius: 20px;
-  display: flex;
-  flex-direction: column;
-  align-self: center;
-  margin: auto;
+.file-entry {
+  margin: 2em;
 }
 
 fieldset {
