--- a/src/Components/4.Journal_Entry_Page/journal.css
+++ b/src/Components/4.Journal_Entry_Page/journal.css
@@ -3,18 +3,18 @@
 }
 .container {
   padding: 10%;
-  width: 80%;
+  width: 85%;
   padding: 0 20px;
-  border-radius: 20px;
+  /* border-radius: 20px; */
   display: flex;
   flex-direction: column;
-  /* align-self: center; */
+  align-self: center;
   margin: 10%;
   font-size: 1em;
 }
 
 .file-entry {
-  margin: 2em;
+  margin: 1em;
 }
 
 fieldset {
