--- a/src/global.css
+++ b/src/global.css
@@ -5,13 +5,26 @@
   --fontFamily: Roboto, Arial, sans-serif;
 }
 
-button {
+/* BUTTONS */
+
+.trophy-display {
+  display: flex;
+  flex-wrap: wrap;
+  /* flex-direction: row; */
+}
+
+.btn {
   /* background-color: var(--green);
   color: white; */
   cursor: pointer;
   padding: 10px;
   margin: 10px;
   font-size: 30px;
+  border-radius: 30px;
+}
+
+.file-entry {
+  margin: 1em;
 }
 /* 
 button:hover {
@@ -22,10 +35,21 @@ button:hover {
   display: flex;
   flex-direction: row;
 }
-/* 
-.nav-bar {
+
+/* .nav-bar {
   display: flex;
-  position: sticky;
+  overflow: hidden;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+} */
+
+/* .navbar {
+  background-color: #333;
+  overflow: hidden;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 } */
 
 .flex-col {
@@ -36,11 +60,6 @@ button:hover {
 .centered {
   justify-content: center;
   align-items: center;
-}
-
-.h1 {
-  font-size: 1.5rem;
-  border-bottom: 2px solid var(--blue);
 }
 
 body {
@@ -56,4 +75,19 @@ body {
 * {
   font-family: var(--fontFamily);
   box-sizing: border-box;
+}
+
+.wrapper {
+  padding-bottom: 55px;
+}
+.container {
+  padding: 10%;
+  width: 85%;
+  padding: 0 20px;
+  /* border-radius: 20px; */
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  margin: 10%;
+  font-size: 1em;
 }
