--- a/src/global.css
+++ b/src/global.css
@@ -26,7 +26,13 @@
 
 .file-entry {
   margin: 1em;
+  flex-direction: row;
+  /* flex-wrap: wrap; */
+  /* justify-content: space-evenly; */
+  align-content: space-around;
+  overflow: hidden;
 }
+
 /* 
 button:hover {
   background-color: var(--blue);
