--- a/src/Components/7.Trophy_Page/trophies.css
+++ b/src/Components/7.Trophy_Page/trophies.css
@@ -1,3 +1,16 @@
 .trophy {
-  /* padding-bottom: 20px; */
+  padding-bottom: 10px;
+}
+
+.trophy-display {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.trophy-button {
+  margin: 7px;
+  /* padding: 10px; */
+  width: 100%;
 }
