--- a/src/App.css
+++ b/src/App.css
@@ -5,13 +5,13 @@
 #darkTheme {
   background-color: #303030;
   color: #fafafa;
-  margin-bottom: 0 !important;
+  /* margin-bottom: 0 !important; */
 }
 
 #lightTheme {
   background-color: #fafafa;
   color: #303030;
-  margin-bottom: 0 !important;
+  /* margin-bottom: 0 !important; */
 }
 
 .MuiBottomNavigationAction-wrapper {
