--- a/src/Components/3.Emotions_Page/EmotionsPage.css
+++ b/src/Components/3.Emotions_Page/EmotionsPage.css
@@ -2,3 +2,12 @@
 .lightTheme {
   padding-bottom: 270px;
 }
+
+.progressBar {
+  position: relative;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+}
