--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,12 @@
   flex-direction: 'column';
   /* color: white; */
 }
+
+.progressBar {
+  position: relative;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+}
