--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -20,13 +19,11 @@ code {
 #darkTheme {
   background-color: #303030;
   color: #fafafa;
-  /* margin-bottom: 0 !important; */
 }
 
 #lightTheme {
   background-color: #fafafa;
   color: #303030;
-  /* margin-bottom: 0 !important; */
 }
 
 .MuiBottomNavigationAction-wrapper {
@@ -35,5 +32,5 @@ code {
   justify-content: 'center';
   width: '100%';
   flex-direction: 'column';
-  /* color: white; */
+  /* color: #303030; */
 }
