--- a/src/Components/11.Edit_Profile_Page/EditProfile.css
+++ b/src/Components/11.Edit_Profile_Page/EditProfile.css
@@ -1,9 +1,11 @@
 #darkTheme.profile {
   background-color: #303030;
   color: #fafafa;
+  padding-bottom: 200px;
 }
 
 #lightTheme.profile {
   background-color: #fafafa;
   color: #303030;
+  padding-bottom: 200px;
 }
