--- a/src/global.css
+++ b/src/global.css
@@ -3,6 +3,8 @@
   --blue: #4a90e2;
   --blueAlpha: #4a91e27c; */
   --fontFamily: Roboto, Arial, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 .btn {
@@ -69,6 +71,14 @@ body {
 
 .profile-pic {
   border-radius: 50%;
+  width: 60%;
+  height: auto;
+  margin: 2em;
+}
+
+.profile-div {
+  display: flex;
+  align-self: center;
 }
 
 #soc-logo {
@@ -96,14 +106,20 @@ body {
 
 .container {
   padding: 10%;
-  width: 85%;
-  padding: 0 20px;
-  /* border-radius: 20px; */
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-self: center;
-  margin: 10%;
-  font-size: 1em;
+}
+.trophycontainer {
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-bottom: 10%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  justify-content: center;
 }
 
 /* Emma workign on Buttons */
