--- a/src/global.css
+++ b/src/global.css
@@ -104,6 +104,10 @@ body {
   padding-bottom: 55px;
 } */
 
+.timeline-container {
+  padding-bottom: 400px;
+}
+
 .container {
   padding: 10%;
   width: 100%;
@@ -115,7 +119,6 @@ body {
 .trophycontainer {
   padding-left: 10%;
   padding-right: 10%;
-  padding-bottom: 10%;
   width: 100%;
   display: flex;
   flex-direction: column;
