--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -2,3 +2,13 @@
   position: fixed;
   bottom: 0;
 }
+
+#darkTheme {
+  background-color: #303030;
+  color: #fafafa;
+}
+
+#lightTheme {
+  background-color: #fafafa;
+  color: #303030;
+}
