--- a/src/global.css
+++ b/src/global.css
@@ -10,6 +10,7 @@
 .btn {
   /* background-color: var(--green);
   color: white; */
+  width: 40%;
   cursor: pointer;
   padding: 10px;
   margin: 10px;
@@ -105,7 +106,7 @@ body {
 } */
 
 .timeline-container {
-  padding-bottom: 400px;
+  padding-bottom: 150px;
 }
 
 .container {
@@ -114,11 +115,12 @@ body {
   display: flex;
   flex-direction: column;
   align-self: center;
-  padding-bottom: 150px;
+  padding-bottom: 200px;
 }
 .trophycontainer {
   padding-left: 10%;
   padding-right: 10%;
+  padding-bottom: 20%;
   width: 100%;
   display: flex;
   flex-direction: column;
